--- a/styles/css/_home.css
+++ b/styles/css/_home.css
@@ -47,3 +47,10 @@ body {
 body {
   background: white;
 }
+
+.hero-banner img {
+  width: 100%;
+  object-fit: cover;
+  height: 600px;
+  padding: 2rem;
+}
