--- a/styles/css/_home.css
+++ b/styles/css/_home.css
@@ -1,34 +1,3 @@
-.img-fluid {
-  width: 100%;
-  height: 400px;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  padding: 2rem;
-  object-fit: contain;
-}
-
-.form-select {
-  width: 200px;
-  background-color: black;
-  color: white;
-  border: none;
-}
-
-.card {
-  margin: 1.2rem;
-  align-items: center;
-  color: black;
-  background-color: white;
-  border-color: 4px black;
-  border-radius: 20px;
-}
-.card .card-img-top {
-  border-radius: 20px;
-  width: 100%;
-  object-fit: cover;
-  margin: 20px;
-}
-
 .btn {
   background: white;
   color: black;
@@ -53,4 +22,47 @@ body {
   object-fit: cover;
   height: 600px;
   padding: 2rem;
+}
+
+#carouselExampleCaptions {
+  width: 100%;
+  padding: 2rem;
+}
+.carousel-item img {
+  height: 500px;
+  object-fit: cover;
+}
+
+.container-sm span {
+  display: block;
+  text-align: center;
+}
+
+.welcome-text {
+  font-size: 50px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 7px;
+  margin-top: 2rem;
+  margin-bottom: 20px;
+  animation: text 3s 1;
+}
+.welcome-2 {
+  font-size: 25px;
+  color: rgb(0, 0, 0);
+}
+.letter {
+  color: rgb(255, 145, 0);
+  font-family: "Great Vibes", cursive;
+}
+
+@keyframes text {
+  0% {
+    color: rgb(216, 28, 28);
+    margin-bottom: -40px;
+  }
+  30% {
+    letter-spacing: 25px;
+    margin-bottom: -40px;
+  }
 }
