--- a/styles/css/_products.css
+++ b/styles/css/_products.css
@@ -14,11 +14,13 @@
   width: 100%;
 }
 .section-title {
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 600;
+  color: rgb(0, 0, 0);
   text-align: center;
   padding: 2rem;
 }
+
 .shop-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(230px, auto));
