--- a/sass/_admin.scss
+++ b/sass/_admin.scss
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 main {
   display: flex;
   align-items: center;
@@ -10,6 +11,7 @@ main {
   min-height: 100vh;
   background: rgb(255, 255, 255);
 }
+
 .container-admin {
   position: relative;
   width: 700px;
@@ -30,6 +32,7 @@ main {
   justify-content: space-around;
   z-index: 1;
 }
+
 form {
   display: flex;
   align-items: center;
@@ -39,12 +42,14 @@ form {
   min-width: 240px;
   padding: 0 10px;
 }
+
 .admin-title {
   font-size: 40px;
   color: rgb(0, 0, 0);
   margin-bottom: 20px;
   margin-top: 20px;
 }
+
 .input-field {
   width: 100%;
   height: 50px;
@@ -54,21 +59,23 @@ form {
   border-radius: 50px;
   display: flex;
   align-items: center;
-}
-.input-field i {
-  flex: 1;
-  text-align: center;
-  color: rgb(0, 0, 0);
-  font-size: 19px;
-}
-.input-field input {
-  flex: 5;
-  background: none;
-  border: none;
-  outline: none;
-  width: 100%;
-  font-size: 19px;
-  color: black;
+
+  i {
+    flex: 1;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-size: 19px;
+  }
+
+  input {
+    flex: 5;
+    background: none;
+    border: none;
+    outline: none;
+    width: 100%;
+    font-size: 19px;
+    color: #000000;
+  }
 }
 
 .admin-btn {
@@ -79,10 +86,10 @@ form {
   background: rgb(0, 0, 0);
   color: white;
   margin: 10px 0;
-}
 
-.admin-btn:hover {
-  background: rgb(62, 155, 89);
+  &:hover {
+    background: rgb(62, 155, 89);
+  }
 }
 
 /*Media queries*/
@@ -93,6 +100,7 @@ form {
     height: 954px;
   }
 }
+
 @media (max-width: 320px) {
   form {
     width: 90%;
