--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -8,11 +8,13 @@
   list-style-type: none;
   text-decoration: none;
 }
+
 .product-container {
   max-width: 1068px;
   margin: auto;
   width: 100%;
 }
+
 .section-title {
   font-size: 2rem;
   font-weight: 600;
@@ -27,26 +29,31 @@
   gap: 1.5rem;
   margin: 1.5rem;
 }
+
 .product-box {
   position: relative;
+
+  &:hover {
+    padding: 10px;
+    border: 1px solid rgb(0, 0, 0);
+    transition: 0.4s;
+  }
 }
-.product-box:hover {
-  padding: 10px;
-  border: 1px solid rgb(0, 0, 0);
-  transition: 0.4s;
-}
+
 .product-img {
   width: 100%;
   height: 200px;
   margin-bottom: 0.5rem;
   object-fit: cover;
 }
+
 .product-title {
   font-size: 1rem;
   font-weight: 600;
   text-transform: uppercase;
   margin-bottom: 0.5rem;
 }
+
 .price {
   font-weight: 500;
 }
