--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -32,7 +32,8 @@ body {
   object-fit: cover;
 }
 
-.welcome-text, .welcome-2 {
+.welcome-text,
+.welcome-2 {
   display: block;
   text-align: center;
 }
