--- a/sass/_admin.scss
+++ b/sass/_admin.scss
@@ -38,7 +38,7 @@ form {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 40%;
+  width: 100%;
   min-width: 240px;
   padding: 0 10px;
 }
@@ -59,6 +59,7 @@ form {
   border-radius: 50px;
   display: flex;
   align-items: center;
+  padding: 0rem 1rem;
 
   i {
     flex: 1;
@@ -68,6 +69,9 @@ form {
   }
 
   input {
+    appearance: none;
+    display: block;
+    width: 100%;
     flex: 5;
     background: none;
     border: none;
@@ -76,6 +80,11 @@ form {
     font-size: 19px;
     color: #000000;
   }
+}
+
+.inputWrapper{
+  position: relative;
+
 }
 
 .admin-btn {
@@ -90,6 +99,16 @@ form {
   &:hover {
     background: rgb(62, 155, 89);
   }
+}
+
+.error-message {
+  font-size: 0.85rem;
+  color: red;
+  position: absolute;
+  top: 36px;
+  left: 0;
+  font-size: 0.75rem;
+  width: 100%;
 }
 
 /*Media queries*/
