--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,1 @@
-$colours: (
-  primary: #000000,
-);
-
-@function getColour($colour) {
-  @return map-get($colours, $colour);
-}
+$primary-color: #000;
