--- a/sass/_admin.scss
+++ b/sass/_admin.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 main {
@@ -16,7 +17,7 @@ main {
   position: relative;
   width: 700px;
   height: 700px;
-  background: linear-gradient(-45deg, rgb(45, 53, 55), $sedoncardy-color);
+  background: $hover-nav;
   border-radius: 15px;
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.2), 0 5px 20px rgba(0, 0, 0, 0.3);
 }
@@ -66,6 +67,7 @@ form.auth-form {
     text-align: center;
     color: $primary-color;
     font-size: 19px;
+    margin-right: 10px;
   }
 
   input {
